--- a/src/Gemfile
+++ b/src/Gemfile
@@ -2,8 +2,10 @@
 
 source "https://rubygems.org"
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
+git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
+gem "rainbow"
+gem "tty-prompt"
 
 gem "rspec", "~> 3.10"
